--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -1,11 +1,12 @@
-version: "3.9"
 services:
   tafuta:
-    build: .
+    build:
+      context: ..
+      dockerfile: docker/Dockerfile
     container_name: tafuta_app
     env_file: .env.dev
     ports:
       - "5000:5000"
     volumes:
-      - .:/app
+      - ..:/app
     restart: unless-stopped
