updating app tafuta and make file

--- a/backend/docker/Dockerfile
+++ b/backend/docker/Dockerfile
@@ -1,21 +1,24 @@
-# Use official Python 3.12 image
+# backend/docker/Dockerfile
 FROM python:3.12-slim
 
 # Set working directory inside container
 WORKDIR /app
 
-# Copy requirements first for caching
-COPY ../requirements.txt .
+# Copy Python dependencies first (for caching)
+COPY ../../requirements.txt .
 
 # Install dependencies
-RUN pip install --upgrade pip \
-    && pip install --no-cache-dir -r requirements.txt
+RUN pip install --upgrade pip && \
+    pip install --no-cache-dir -r requirements.txt
 
-# Copy the rest of the backend code
-COPY ../ .
+# Copy backend source code into container
+COPY ../../backend ./backend
 
-# Expose Flask port
+# Set PYTHONPATH so imports work
+ENV PYTHONPATH=/app/backend
+
+# Expose the port inside the container
 EXPOSE 5000
 
-# Run the app with Gunicorn
+# Run the Flask app with Gunicorn
 CMD ["gunicorn", "--bind", "0.0.0.0:5000", "app:app"]
