updating app tafuta and make file

--- a/backend/docker/Dockerfile
+++ b/backend/docker/Dockerfile
@@ -1,24 +1,22 @@
 # backend/docker/Dockerfile
 FROM python:3.12-slim
 
-# Set working directory inside container
 WORKDIR /app
 
-# Copy Python dependencies first (for caching)
 COPY ../../requirements.txt .
-
-# Install dependencies
 RUN pip install --upgrade pip && \
     pip install --no-cache-dir -r requirements.txt
 
-# Copy backend source code into container
 COPY ../../backend ./backend
 
-# Set PYTHONPATH so imports work
-ENV PYTHONPATH=/app/backend
+ARG ENV=prod
+ENV PYTHONPATH=/app/backend \
+    FLASK_APP=backend/app.py \
+    FLASK_RUN_HOST=0.0.0.0 \
+    FLASK_RUN_PORT=5000
 
-# Expose the port inside the container
-EXPOSE 5000
+# Install Flask dev dependencies if ENV=dev
+RUN if [ "$ENV" = "dev" ]; then pip install flask[async]; fi
 
-# Run the Flask app with Gunicorn
-CMD ["gunicorn", "--bind", "0.0.0.0:5000", "app:app"]
+# Command will be overridden in docker-compose
+CMD ["gunicorn", "--bind", "0.0.0.0:5000", "backend.app:app"]
